# rinha-backend-2026

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  info.json  nginx.conf
src/: main.rs  preprocessing.rs
