[package]
name = "rinha-backend-2026"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

autobins = false

[[bin]]
name = "rinha-backend-2026"
path = "src/main.rs"

[[bin]]
name = "preprocessing"
path = "src/preprocessing.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
# Para busca vetorial rápida, considere usar SIMD ou memmap2 se carregar de arquivo
memmap2 = "0.9"
flate2 = "1.0"
